--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,7 +196,6 @@ body {
 }
 
 @media (max-width: 1440px) {
-
   .row-info__top {
     gap: 8px;
   }
@@ -207,14 +206,12 @@ body {
 }
 
 @media (max-width: 1400px) {
-
   .nav__row-logo {
     margin-left: 2.77vw;
   }
 }
 
 @media (max-width: 1380px) {
-
   .row-info__top {
     padding-right: 10px;
   }
@@ -225,7 +222,6 @@ body {
 }
 
 @media (max-width: 1020px) {
-
   .logo__img {
     max-width: 95%;
   }
@@ -240,7 +236,6 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .nav__row-logo {
     position: absolute;
     top: 80px;
@@ -258,7 +253,6 @@ body {
 }
 
 @media (max-width: 575px) {
-
   .row-info__top {
     width: 500px;
     font-size: 16px;
@@ -281,8 +275,9 @@ body {
 //------------ HEADER ---------------
 
 .header__row {
+  width: 100%;
   height: 825px;
-  background-position: 0 0;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -319,7 +314,7 @@ body {
 
 .header__title {
   font-size: 114px;
-  font-family: "AlfaS lab One";
+  font-family: "Alfa Slab One";
   color: rgb(61, 37, 20);
   text-transform: uppercase;
   line-height: 0.54;
@@ -333,7 +328,7 @@ body {
 
 .header__suptitle {
   font-size: 57px;
-  font-family: "AlfaS lab One";
+  font-family: "Alfa Slab One";
   color: rgb(61, 37, 20);
   text-transform: uppercase;
   line-height: 1.093;
@@ -352,38 +347,7 @@ body {
   z-index: 1;
 }
 
-.ellipse__img {
-  position: absolute;
-  top: 771px;
-  left: 220px;
-  z-index: 1;
-}
-
-.burger-price {
-  font-family: "Bebas Neue";
-  position: absolute;
-  top: 822px;
-  left: 267px;
-  z-index: 1;
-  color: rgb(255, 255, 255);
-  line-height: 0.543;
-  font-size: 70px;
-}
-
-.price__num {
-  font-size: 30px;
-  margin-top: 16px;
-  margin-left: -12px;
-}
-
-.price__txt {
-  font-size: 35px;
-  margin-left: 0px;
-  letter-spacing: .7rem;
-}
-
 @media (max-width: 1440px) {
-
   .header__info {
     position: absolute;
     top: 142px;
@@ -391,20 +355,18 @@ body {
   }
 
   .header-img {
-    left: 463px;
+    left: 467px;
   }
 }
 
 @media (max-width: 1330px) {
-
   .header__row {
-    height: auto;
     flex-direction: column;
+    height: 1170px;
   }
 
   .header-img {
-    left: 50%;
-    transform: translate(-50%);
+    left: calc(100vw - 100%);
     top: 175px;
   }
 
@@ -417,11 +379,6 @@ body {
 }
 
 @media (max-width: 1200px) {
-
-  .header__row {
-    height: 970px;
-  }
-
   .header__info {
     top: 100px;
     left: 50%;
@@ -446,35 +403,18 @@ body {
     transform: translate(-50%);
     margin-top: 60px;
   }
+}
 
-  .ellipse__img {
-    max-width: 12%;
-    top: 571px;
-    left: 300px;
-  }
-
-  .burger-price {
-    top: 617px;
-    left: 338px;
-    font-size: 45px;
-    line-height: .6;
-  }
-
-  .price__num {
-    font-size: 20px;
-    margin-left: .1px;
-  }
-
-  .price__txt {
-    font-size: 26px;
-    margin-left: 0px;
+@media (max-width: 1180px) {
+  .header__row {
+    height: auto;
+    min-height: 950px;
   }
 }
 
 @media (max-width: 1020px) {
-
   .header__row {
-    height: 860px;
+    height: 1040px;
   }
 
   .header__info {
@@ -503,44 +443,18 @@ body {
   .header__img {
     margin-top: 45px;
   }
-
-  .ellipse__img {
-    max-width: 10%;
-    top: 510px;
-    left: 290px;
-  }
-
-  .burger-price {
-    top: 540px;
-    left: 315px;
-    font-size: 30px;
-    line-height: .75;
-  }
-
-  .price__num {
-    font-size: 16px;
-    margin-left: .1px;
-  }
-
-  .price__txt {
-    font-size: 20px;
-    margin-left: 0px;
-    letter-spacing: .5rem;
-  }
 }
 
 @media (max-width: 990px) {
-
-  .burger-price {
-    top: 537px;
-  }
-
-  .ellipse-img {
-    margin-top: 10vw;
+  .header__row {
+    height: 1000px;
   }
 }
 
 @media (max-width: 924px) {
+  .header__row {
+    height: 1000px;
+  }
 
   .header__subtitle {
     font-size: 18px;
@@ -548,6 +462,9 @@ body {
 }
 
 @media (max-width: 880px) {
+  .header__row {
+    height: 910px;
+  }
 
   .header__subtitle {
     font-size: 16px;
@@ -555,14 +472,11 @@ body {
   }
 }
 
-@media (max-width: 685px) {
-
-  .header__subtitle {
-    margin-left: 0px;
-  }
-}
-
 @media (max-width: 768px) {
+  .header__row {
+    height: auto;
+    min-height: 830px;
+  }
 
   .row-info__top {
     display: none;
@@ -617,10 +531,6 @@ body {
     top: 70px;
   }
 
-  .header__row {
-    height: 700px;
-  }
-
   .header__info {
     top: 40px;
   }
@@ -648,32 +558,28 @@ body {
   .header__img {
     margin-top: 50px;
   }
+}
 
-  .ellipse__img {
-    max-width: 9%;
-    top: 400px;
-    left: 215px;
+@media (max-width: 700px) {
+  .header__row {
+    min-height: 780px;
+  }
+}
+
+@media (max-width: 685px) {
+  .header__row {
+    min-height: 740px;
   }
 
-  .burger-price {
-    top: 420px;
-    left: 232px;
-    font-size: 20px;
-    line-height: .8;
-  }
-
-  .price__num {
-    font-size: 14px;
-  }
-
-  .price__txt {
-    font-size: 16px;
-    margin-left: -1-2px;
-    letter-spacing: .3rem;
+  .header__subtitle {
+    margin-left: 0px;
   }
 }
 
 @media (max-width: 575px) {
+  .header__row {
+    min-height: 670px;
+  }
 
   .nav__link {
     transition: .3s ease;
@@ -693,20 +599,12 @@ body {
     transform: translate(-45%);
     margin-top: 15px;
   }
-
-  .ellipse__img {
-    max-width: 13%;
-    top: 390px;
-    left: 150px;
-  }
-
-  .burger-price {
-    top: 410px;
-    left: 170px;
-  }
 }
 
 @media (max-width: 480px) {
+  .header__row {
+    min-height: 580px;
+  }
 
   .nav__link {
     font-size: 40px !important;
@@ -745,29 +643,19 @@ body {
   .header__img {
     margin-top: 40px;
   }
-
-  .ellipse__img {
-    max-width: 15%;
-    top: 340px;
-    left: 105px;
-  }
-
-  .burger-price {
-    top: 359px;
-    left: 123px;
-  }
 }
 
 @media (max-width: 400px) {
+  .header__row {
+    min-height: 515px;
+  }
 
   .burger-btn {
     left: 81vw;
   }
-
 }
 
 @media (max-width: 320px) {
-
   .nav__link {
     font-size: 30px !important;
   }
@@ -785,7 +673,7 @@ body {
   }
 
   .header__row {
-    height: 530px;
+    min-height: 450px;
   }
 
   .header__info {
@@ -816,29 +704,6 @@ body {
   .header__img {
     max-width: 130%;
     margin-top: 1px;
-  }
-
-  .ellipse__img {
-    max-width: 20%;
-    top: 260px;
-    left: 50px;
-  }
-
-  .burger-price {
-    top: 273px;
-    left: 63px;
-    font-size: 20px;
-    line-height: .8;
-  }
-
-  .price__num {
-    font-size: 14px;
-  }
-
-  .price__txt {
-    font-size: 16px;
-    margin-left: -1-2px;
-    letter-spacing: .3rem;
   }
 }
 
@@ -877,7 +742,6 @@ body {
 }
 
 @media (max-width: 1440px) {
-
   .burger__row {
     display: flex;
     justify-content: space-between;
@@ -892,7 +756,6 @@ body {
 }
 
 @media (max-width: 1400px) {
-
   .burger__content {
     height: auto;
   }
@@ -906,7 +769,6 @@ body {
 }
 
 @media (max-width: 650px) {
-
   .most-img,
   .fresh-img,
   .more-img {
@@ -915,14 +777,12 @@ body {
 }
 
 @media (max-width: 530px) {
-
   .most-img {
     margin-top: -15px;
   }
 }
 
 @media (max-width: 320px) {
-
   .burger__row {
     padding: 50px 0px 40px 0px;
     gap: 20px;
@@ -964,7 +824,7 @@ body {
 }
 
 .suptitle-txt {
-  max-width: 1070px;
+  width: 74.3vw;
   font-size: 16px;
   font-family: "Montserrat";
   color: rgb(61, 37, 20);
@@ -1058,7 +918,7 @@ body {
   width: 195px;
   height: 57px;
   z-index: 1;
-  margin-top: 35px;
+  margin-top: 34px;
 
   cursor: pointer;
 }
@@ -1076,7 +936,6 @@ body {
 }
 
 @media (max-width: 1440px) {
-
   .chooce__content {
     height: 990px;
     height: auto;
@@ -1090,7 +949,6 @@ body {
   .suptitle-txt {
     letter-spacing: .01rem;
   }
-
 
   .column-title1 {
     margin-left: 18px;
@@ -1114,7 +972,6 @@ body {
 }
 
 @media (max-width: 1420px) {
-
   .inner-row {
     flex-wrap: wrap;
     gap: 300px;
@@ -1126,7 +983,6 @@ body {
   }
 
   @media (max-width: 1068px) {
-
     .inner-row {
       flex-wrap: wrap;
       gap: 200px;
@@ -1139,6 +995,9 @@ body {
 }
 
 @media (max-width: 990px) {
+.suptitle-txt {
+  text-align: left;
+  }
 
   .subtitle-img {
     width: 20%;
@@ -1181,21 +1040,18 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .choce-title {
     font-size: 40px;
   }
 }
 
 @media (max-width: 575px) {
-
   .subtitle-img {
     width: 33%;
   }
 }
 
 @media (max-width: 480px) {
-
   .subtitle-img {
     width: 38%;
   }
@@ -1218,7 +1074,6 @@ body {
 }
 
 @media (max-width: 424px) {
-
   .choce-title {
     font-size: 30px;
     margin-top: 35px;
@@ -1252,6 +1107,10 @@ body {
     margin-left: 40px;
   }
 
+  .inner-row__column img {
+    width: 70%;
+  }
+
   .column-title {
     font-size: 30px;
     margin-bottom: 20px;
@@ -1264,11 +1123,16 @@ body {
     padding: 0 50px;
   }
 
+  .column__order img {
+    width: 200px;
+  }
+
   .order-img {
     font-size: 15px;
-    width: 160px;
     height: 50px;
-    margin-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
   }
 }
 
@@ -1380,7 +1244,6 @@ body {
 }
 
 @media (max-width: 1440px) {
-
   .discover__content {
     padding-top: 52px;
     margin-top: -2px;
@@ -1394,13 +1257,12 @@ body {
   }
 
   .discover-txt {
-    margin-top: 31px;
+    margin-top: 27px;
     line-height: 1.67;
   }
 }
 
 @media (max-width: 1327px) {
-
   .discover__content {
     height: 965px;
   }
@@ -1447,7 +1309,6 @@ body {
 }
 
 @media (max-width: 1200px) {
-
   .discover__content {
     height: 910px;
   }
@@ -1481,7 +1342,6 @@ body {
 }
 
 @media (max-width: 1020px) {
-
   .discover__subtitle {
     margin-left: 50%;
     transform: translate(-40%);
@@ -1499,7 +1359,6 @@ body {
 }
 
 @media (max-width: 990px) {
-
   .discover__content {
     height: 890px;
   }
@@ -1528,7 +1387,6 @@ body {
 }
 
 @media (max-width: 882px) {
-
   .swiper {
     width: 90%;
   }
@@ -1540,7 +1398,6 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .discover__content {
     height: 760px;
   }
@@ -1583,7 +1440,6 @@ body {
 }
 
 @media (max-width: 575px) {
-
   .discover__content {
     margin-top: -25px;
     height: 670px;
@@ -1628,7 +1484,6 @@ body {
 
 
 @media (max-width: 480px) {
-
   .discover__content {
     margin-top: -20px;
     height: 660px;
@@ -1672,7 +1527,6 @@ body {
 }
 
 @media (max-width: 320px) {
-
   .discover__content {
     margin-top: -40px;
     margin-top: -20px;
@@ -1724,7 +1578,6 @@ body {
   background-color: #fff;
   overflow: hidden;
   position: relative;
-
 }
 
 .content-suptitle {
@@ -1823,7 +1676,6 @@ body {
 }
 
 @media (max-width: 1440px) {
-
   .reservation__content {
     height: 712px;
   }
@@ -1847,7 +1699,7 @@ body {
   }
 
   .burger__img {
-    left: -86px;
+    left: -100px;
     top: -9px;
   }
 
@@ -1863,7 +1715,6 @@ body {
 }
 
 @media (max-width: 1327px) {
-
   .reservation__content {
     height: 912px;
   }
@@ -1921,14 +1772,12 @@ body {
 }
 
 @media (max-width: 1020px) {
-
   .reservation__content {
     height: 875px;
   }
 }
 
 @media (max-width: 1020px) {
-
   .burger__img {
     width: 40%;
     left: -80px;
@@ -1981,7 +1830,6 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .reservation__content {
     height: 750px;
   }
@@ -1997,7 +1845,6 @@ body {
   .reservation__content-suptitle {
     font-size: 26px;
   }
-
 
   .content-title {
     top: 410px;
@@ -2019,7 +1866,6 @@ body {
 }
 
 @media (max-width: 700px) {
-
   .reservation-form {
     top: 487px;
     gap: 40px;
@@ -2037,14 +1883,12 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .reservation__content {
     height: 720px;
   }
 }
 
 @media (max-width: 700px) {
-
   .reservation__content {
     height: 700px;
   }
@@ -2064,7 +1908,6 @@ body {
 }
 
 @media (max-width: 645px) {
-
   .reservation__content {
     height: 680px;
   }
@@ -2087,7 +1930,6 @@ body {
 }
 
 @media (max-width: 575px) {
-
   .reservation__content {
     height: 630px;
   }
@@ -2137,7 +1979,6 @@ body {
 }
 
 @media (max-width: 570px) {
-
   .reservation__content {
     height: 880px;
   }
@@ -2164,7 +2005,6 @@ body {
 }
 
 @media (max-width: 480px) {
-
   .reservation__content {
     height: 820px;
   }
@@ -2195,7 +2035,6 @@ body {
 }
 
 @media (max-width: 420px) {
-
   .reservation__content {
     height: 755px;
   }
@@ -2227,7 +2066,6 @@ body {
 }
 
 @media (max-width: 380px) {
-
   .reservation__content {
     height: 700px;
   }
@@ -2263,7 +2101,6 @@ body {
 }
 
 @media (max-width: 340px) {
-  
   .reservation__content {
     height: 630px;
   }
@@ -2290,5 +2127,455 @@ body {
 
   .input__find {
     line-height: .6;
+  }
+}
+
+//------------ FOOTER -------------
+
+.footer__content {
+  height: 590px;
+  background-color: #fff;
+  position: relative;
+  margin-top: -1px;
+}
+
+.footer__row {
+  max-width: 1327px;
+  width: 100%;
+  height: 525px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-info__logo {
+  width: 100%;
+  margin-top: 83px;
+  margin-left: 44px;
+}
+
+.footer-info__txt {
+  font-size: 17px;
+  font-family: "Montserrat";
+  color: rgb(255, 255, 255);
+  line-height: 1.48;
+  width: 518px;
+  height: 88px;
+  margin-left: 44px;
+  margin-top: 43px;
+}
+
+.foooter-info__copyright {
+  font-size: 16px;
+  font-family: "Bebas Neue";
+  color: rgb(255, 255, 255);
+  letter-spacing: .018rem;
+  margin-top: 173px;
+  margin-left: 43px;
+}
+
+.connection-info {
+  margin-top: 236px;
+  margin-right: 117px;
+}
+
+.footer-connection__location {
+  margin-right: 10px;
+}
+
+.location-img {
+  margin-right: 31px;
+}
+
+.location-txt {
+  font-size: 21px;
+  font-family: "Bebas Neue";
+  color: rgb(255, 255, 255);
+  line-height: 1.8;
+  text-align: left;
+  letter-spacing: -.02rem;
+  cursor: pointer;
+}
+
+.footer-connection__post {
+  margin-top: 10px;
+}
+
+.email-img {
+  margin-top: 5px;
+  margin-right: 33px;
+}
+
+.email-txt {
+  font-size: 20px;
+  font-family: "Bebas Neue";
+  color: rgb(255, 255, 255);
+  line-height: 1.8;
+  letter-spacing: .01rem;
+  text-align: left;
+  cursor: pointer;
+}
+
+.footer-connection__social {
+  display: flex;
+  margin-top: 154px;
+  margin-left: 15.85vw;
+  gap: 12px;
+}
+
+.instagram {
+  cursor: pointer;
+}
+
+.facebook {
+  cursor: pointer;
+}
+
+.twitter {
+  cursor: pointer;
+}
+
+
+.whatsapp {
+  cursor: pointer;
+}
+
+@media (max-width: 1440px) {
+  .footer__content {
+    margin-top: 0px;
+  }
+
+  .footer-info__txt {
+    width: 540px;
+  }
+
+  .footer-connection__social {
+    margin-left: 16.66vw;
+  }
+}
+
+@media (max-width: 1200px) {
+  .footer-info__logo {
+    width: 90%;
+  }
+
+  .footer-info__txt {
+    font-size: 16px;
+  }
+
+  .foooter-info__copyright {
+    font-size: 14px;
+  }
+
+  .location-img {
+    margin-right: 25px;
+  }
+
+  .location-txt {
+    font-size: 19px;
+  }
+
+  .email-img {
+    margin-right: 25px;
+  }
+
+  .email-txt {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1020px) {
+  .footer-info__logo {
+    width: 70%;
+  }
+
+  .footer-info__txt {
+    width: 450px;
+    font-size: 16px;
+  }
+
+  .footer-connection__social {
+    margin-left: 18vw;
+  }
+}
+
+@media (max-width: 990px) {
+  .footer-info__logo {
+    width: 80%;
+  }
+
+  .footer-info__txt {
+    width: 400px;
+    font-size: 15px;
+  }
+
+  .foooter-info__copyright {
+    font-size: 13px;
+  }
+
+  .connection-info {
+    margin-right: 80px;
+  }
+
+  .location-img {
+    margin-right: 25px;
+  }
+
+  .location-txt {
+    font-size: 19px;
+  }
+
+  .email-img {
+    margin-right: 25px;
+  }
+
+  .email-txt {
+    font-size: 19px;
+  }
+
+  .footer-connection__social {
+    margin-left: 15vw;
+  }
+}
+
+@media (max-width: 858px) {
+  .connection-info {
+    margin-right: 20px;
+  }
+
+  .footer-info__txt {
+    width: 380px;
+  }
+
+  .location-img {
+    margin-right: 20px;
+  }
+
+  .location-txt {
+    font-size: 18px;
+  }
+
+  .email-img {
+    margin-right: 25px;
+  }
+
+  .email-txt {
+    font-size: 18px;
+  }
+
+  .footer-connection__social {
+    margin-left: 10vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-info__logo {
+    width: 75%;
+  }
+
+  .footer__row {
+    height: 525px;
+    background-size: contain;
+    flex-direction: column;
+  }
+
+  .footer-info {
+    margin: 0 auto;
+    margin-top: -20px;
+  }
+
+  .footer-connection {
+    margin-top: -400px;
+    margin-left: 10.4vw;
+  }
+
+  .connection-info {
+    margin-left: 50%;
+    transform: translate(-60%);
+  }
+
+  .foooter-info__copyright {
+    margin-top: 220px;
+    margin-left: 15.6vw;
+    margin-left: calc(100vw - 61%);
+  }
+
+  .footer-connection__social {
+    margin-left: 52vw;
+    position: relative;
+    top: -210px;
+    z-index: 1;
+  }
+}
+
+@media (max-width: 575px) {
+  .footer-info__logo {
+    width: 50%;
+    margin-left: 50%;
+    transform: translate(-60%);
+  }
+
+  .footer-info__txt {
+    margin-left: 50%;
+    transform: translate(-55%);
+  }
+
+  .connection-info {
+    margin-top: 220px;
+    margin-left: 50%;
+    transform: translate(-50%);
+  }
+
+  .location-img {
+    width: 10%;
+    margin-right: 10px;
+  }
+
+  .location-txt {
+    font-size: 16px;
+  }
+
+  .email-img {
+    width: 10%;
+    margin-right: 10px;
+  }
+
+  .email-txt {
+    font-size: 16px;
+  }
+
+  .footer-connection__social {
+    top: -128px;
+    margin-left: 25vw;
+    gap: 25px;
+  }
+
+  .foooter-info__copyright {
+    margin-top: 240px;
+  }
+}
+
+@media (max-width: 562px) {
+  .footer__content {
+    height: 570px;
+  }
+
+  .footer-info__logo {
+    width: 35%;
+    margin-left: calc(100vw - 27%);
+  }
+
+  .footer-info__txt {
+    width: 400px;
+    margin-top: 30px;
+    font-size: 14px;
+    margin-left: calc(100vw - 27%);
+  }
+
+  .connection-info {
+    margin-top: 120px;
+  }
+
+  .footer-connection__location {
+    width: 200px;
+    margin-left: 13vw;
+  }
+
+  .location-txt {
+    font-size: 16px;
+    position: relative;
+    top: 30px;
+    z-index: 1;
+    margin-left: -105px;
+  }
+
+  .footer-connection__post {
+    width: 200px;
+    margin-left: 13vw;
+  }
+
+  .email-img {
+    width: 10%;
+    margin-right: 0px;
+    margin-top: 30px;
+  }
+
+  .email-txt {
+    font-size: 16px;
+    position: relative;
+    top: 50px;
+    z-index: 1;
+    margin-left: -85px;
+  }
+
+  .footer-connection__social {
+    top: -90px;
+    margin-left: 20vw;
+    gap: 25px;
+  }
+
+  .foooter-info__copyright {
+    font-size: 14px;
+    margin-top: 250px;
+    margin-left: calc(100vw - 42%);
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-info__logo {
+    width: 25%;
+    margin-left: calc(100vw - 27%);
+  }
+
+  .footer-connection__location {
+    margin-left: 12vw;
+  }
+
+  .footer-connection__post {
+    margin-left: 12vw;
+  }
+
+  .footer-connection__social {
+    top: -80px;
+    margin-left: 16vw;
+  }
+
+  .foooter-info__copyright {
+    font-size: 13px;
+    margin-top: 280px;
+    margin-left: calc(100vw - 42%);
+  }
+}
+
+@media (max-width: 456px) {
+  .footer-info__txt {
+    width: 83.3vw;
+    margin-top: 30px;
+    font-size: 14px;
+    margin-left: calc(100vw - 27%);
+  }
+}
+
+@media (max-width: 320px) {
+  .footer-connection__location {
+    margin-left: 9vw;
+  }
+
+  .footer-connection__post {
+    margin-left: 9vw;
+  }
+
+  .footer-connection__social {
+    top: -80px;
+    margin-left: 5vw;
+  }
+
+  .foooter-info__copyright {
+    font-size: 12px;
+    margin-top: 300px;
+    margin-left: calc(100vw - 46%);
   }
 }
